Fixed spacing issue

--- a/src/styles/layout/_container.scss
+++ b/src/styles/layout/_container.scss
@@ -1,5 +1,5 @@
 .container {
   margin: 0 auto;
   max-width: $max-width;
-  padding: $space-md;
+  padding: 0 $space-md;
 }
